compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/callResolution/ambiguousUnqualifiedRoleMember.qn
impl HttpCtx<...Caps> : pub HealthSignal<HttpCtx<...Caps>> {
  healthy() -> bool {
    return request.valid
  }
}

context HttpCtx<...Caps> : pub HealthSignal<HttpCtx<...Caps>> {
  healthy() -> bool {
    return request.valid && slots.valid
  }
}

pub ambiguous(ctx: HttpCtx<AuthUser>) -> bool {
  return ctx.healthy()
}
